--- a/tela_inicio.html
+++ b/tela_inicio.html
@@ -11,5 +11,6 @@
 </head>
 <body>
   <button class="custom-btn btn-15" onclick="cadastro_cliente();return false">Cadastro de cliente<div class="dot"></div></button>
+  <button class="custom-btn btn-15" onclick="Rascunho();return false">Rascunho<div class="dot"></div></button>
 </body>
 </html>
